Fix image card for smaller devices as was not responsive

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,15 @@
   }
       
 .card {
-  width: 300px;
   margin-top: 20px;
   padding: 10px;
+}
+
+
+/* media queries */
+
+@media (min-width: 1200px) {
+  .card {
+    width: 300px;
+  }
 }
